--- a/matrix/Makefile
+++ b/matrix/Makefile
@@ -1,5 +1,5 @@
-CC		:= g++
-C_FLAGS := -std=c++17 -Wall -Wextra
+CC		:= g++-8
+C_FLAGS := -std=c++17 -pedantic -pedantic-errors -Wall -Wextra -march=native -Og
 
 BIN		:= bin
 SRC		:= src
